--- a/Pets/Pets-android/app/src/main/res/values/strings.xml
+++ b/Pets/Pets-android/app/src/main/res/values/strings.xml
@@ -15,6 +15,7 @@
     <string name="log_in">Log in</string>
     <string name="forgot_password">Forgot Password</string>
     <string name="sign_up">Sign up</string>
+    <string name="cancel">Cancel</string>
 
     <string name="introduction_1">Capture the macthless\n
               moments</string>
