--- a/Lab_6/app/src/main/res/values/strings.xml
+++ b/Lab_6/app/src/main/res/values/strings.xml
@@ -7,4 +7,6 @@
     <string name="password">Password</string>
     <string name="login">Login</string>
     <string name="register">Register</string>
+    <string name="title">Title</string>
+    <string name="content">Content</string>
 </resources>
