--- a/Observertest/app/src/main/res/values/strings.xml
+++ b/Observertest/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
-    <string name="app_name">Observertest</string>
+    <string name="app_name">ObserverTest</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
